--- a/code debug.ipynb
+++ b/code debug.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "790cd3b5",
+   "execution_count": 1,
+   "id": "ded2d62f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "c67305cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([20, 33, 101, 201])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# With square kernels and equal stride\n",
+    "m = nn.ConvTranspose2d(16, 33, 3, stride=2)\n",
+    "# non-square kernels and unequal stride and with padding\n",
+    "input = torch.randn(20, 16, 50, 100)\n",
+    "output = m(input)\n",
+    "output.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
-   "id": "77b212f5",
+   "id": "686e191b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a9c3d824",
+   "id": "7dc9a609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "718a7459",
+   "id": "c645dc9a",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +151,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3037cf",
+   "id": "c7b5f75c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42ec1565",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b640da9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8e83ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07b08679",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3377ca28",
    "metadata": {},
    "outputs": [],
    "source": []
